# cosmic-ai-panel

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
i18n/en/: cosmic_ai_panel.ftl
release-package/: app.metainfo.xml  install.sh  uninstall.sh
resources/: app.desktop  app.metainfo.xml  cosmic-ai-panel.desktop
src/: app.rs  chat.rs  main.rs  personalization.rs  provider.rs  secrets.rs  storage.rs
src/app/: chat_actions.rs  chats_actions.rs  dispatch.rs  lifecycle.rs  message.rs  model.rs  provider_events.rs  runtime.rs  settings_actions.rs  settings_state.rs  style.rs
src/app/views/: chat.rs  chats.rs  components.rs  feedback.rs  messages.rs  mod.rs  settings.rs  settings_parts.rs
src/runtime/: mod.rs  personalization.rs
src/runtime/context/: builder.rs  mod.rs
